fixed line alignment on single page

--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -308,6 +308,7 @@ a, a:hover {
 
 footer {
 	padding: 0 80px 100px 80px;
+	position: relative;
 	overflow-x: hidden;
 }
 
@@ -372,7 +373,7 @@ p.name {
 
 .vertical-contact {
 	position: absolute;
-	left: 0;
+	left: 15px;
 	margin-top: 170px;
 	font-size: 40px !important;
 	font-weight: 900;
